--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -135,5 +135,30 @@
 	<exception-type>java.lang.NullPointerException</exception-type>
 	<location>/error/errorNullPointer.jsp</location>
 </error-page> -->
+
+<servlet>
+<servlet-name>conOne</servlet-name>
+<servlet-class>com.mvc.control.ControlServlet</servlet-class>
+										
+</servlet>
+<servlet-mapping>
+<servlet-name>conOne</servlet-name>
+<url-pattern>*.mdo</url-pattern>
+</servlet-mapping>
+
+ 
+ <servlet>
+  <servlet-name>ControllerURI</servlet-name>
+  <servlet-class>mvc.Controller</servlet-class>
+  <init-param>
+   <param-name>propertyConfig</param-name>
+   <param-value>Command.properties</param-value>
+  </init-param>
+ 
+ </servlet>
+ <servlet-mapping>
+ <servlet-name>ControllerURI</servlet-name>
+ <url-pattern>*.do</url-pattern>
+ </servlet-mapping>
  
  </web-app>
